Fixed form alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,11 @@ p {
   background: var(--accent-color);
 }
 
+.contact-form
+{
+  text-align: left;
+}
+
 @media (max-width: 576px) {
   h1 {
     font-size: 48px;
